chore: reorganizar archivos de test y ejemplos
- mover test-install.sh a tests/
- mover moodle_backup.conf.example a tests/
- actualizar .gitignore para excluir tests/ (excepto README.md)
- mantener repositorio de producción limpio

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 # ===================== MOODLE BACKUP V3 - GITIGNORE =====================
 
+# Tests y desarrollo - mantener directorio limpio en producción
+tests/
+!tests/README.md
+test-*.sh
+test-*.conf
+*.test
+*.test.*
+dev-*
+personal-*
+scratch.*
+
 # Archivos de configuración locales
 *.conf
 !*.conf.example
