fix(ci): corregir permisos de ejecución para scripts en workflows
- agregar paso para establecer permisos +x en scripts antes de ejecutarlos
- crear .gitattributes para manejar correctamente terminaciones de línea
- asegurar que lint.sh y otros scripts tengan permisos de ejecución en CI/CD

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
                   sudo apt-get update
                   sudo apt-get install -y shellcheck
 
+            - name: Set script permissions
+              run: chmod +x ./scripts/lint.sh
+
             - name: Run lint checks
               run: ./scripts/lint.sh
 
