--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,17 @@
+# Asegurar que los scripts shell mantengan permisos de ejecución
+*.sh text eol=lf
+*.sh filter=lfs diff=lfs merge=lfs -text
+
+# Binarios y ejecutables
+bin/* binary
+mb binary
+# Archivos de configuración
+*.conf text eol=lf
+*.json text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.md text eol=lf
+# Archivos de prueba
+*.bats text eol=lf
+test_helper* text eol=lf
 *.sh !text !filter !merge !diff
