--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -19,6 +19,10 @@ jobs:
                   sudo apt-get update
                   sudo apt-get install -y shellcheck bash
 
+            - name: Set script permissions
+              run: |
+                  find . -name "*.sh" -type f -exec chmod +x {} \;
+
             - name: ShellCheck Analysis
               run: |
                   find . -name "*.sh" -type f | xargs shellcheck -f gcc > shellcheck-report.txt || true
