--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,10 @@ jobs:
                   sudo apt-get update
                   sudo apt-get install -y shellcheck
 
-            - name: Set script permissions
-              run: chmod +x ./scripts/lint.sh
-
             - name: Run lint checks
-              run: ./scripts/lint.sh
+              run: |
+                  chmod +x ./scripts/lint.sh
+                  bash ./scripts/lint.sh
 
     test:
         name: Run Tests
