--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
+              with:
+                  lfs: true # Asegurar que Git LFS funcione si es necesario
 
             - name: Install ShellCheck
               run: |
